--- a/src/components/sections/ProductGallery/product-gallery.scss
+++ b/src/components/sections/ProductGallery/product-gallery.scss
@@ -77,7 +77,7 @@
     min-height: initial;
     padding: 0;
 
-    .button[data-store-button] {
+    [data-fs-button] {
       display: none;
     }
 
